--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -84,6 +84,7 @@ disabled = true
 [directory]
 style = 'bold purple'
 truncate_to_repo = false
+truncation_length = 6
 
 [git_branch]
 style = 'bold #bd93f9'
